-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.975 2011-04-26 00:40:17 remko Exp $
-----------------------------------------------------------------------------------------
				
2011-04-25	remko
	* grdimage_func.c:	Add half a cell at edge when projecting pixel grid.
	* gmt_map.c:		When longitude spans 360 in Lambert projection, set is_world = TRUE.
	* gmt_grdio.c (GMT_grd_setregion):	Keep grid longitude range when map.is_world.		
	* gmt_grd.h:		Restrict GMT_is_subgrid to actual subgrids.
	* gmt.txt:		Added -n option.
	* explain_-n_full.txt:	Fixed typos, fixed wrong GMT_n_OPT

2011-04-25	jluis
	* gmt_map.c:		Removed GMT_grdproject_init in favor of GMT_project_init
				that takes as second input a GRD_HEADER pointer instead of
				pointers to GMT_GRID or GMT_IMAGE containers.
	* grdimage_func.c:	When illuminating an image if -R is not set use grid limits

2011-04-24	pwessel
	* gmt*.c:		Introduced common option -n[b|c|l|n][+a][+b<BC>][+t<threshold>]
				that can be used to change grid interpolation parameters.
				Replaces a mix of -S, -Q, -L options across many programs.
				Those -L -Q -S options are still processed under compatibility mode.
	* Option -s:		New modifier a (i.e., -sa) to suppress output of any data record
				where one or more fields equal NaN.
	* grdtrack_func.c:	Replaced -S with common option -sa (backwards compatible).

2011-04-24	remko
	* GMT_App_N.sh:		Remove GMT_Appendix_N_1.tex when empty.
	* gmt_grdio.c (GMT_grd_setregion):	Return value now 0, 1, 2 instead of 1, 0, 0;
				Hence add ! before GMT_grd_setregion where it was used before.
				
2011-04-24	jluis
	* grdimage_func.c:	Accepts to illuminate an image read via GDAL with an 
				illumination grid computed with grdgradient.

2011-04-23	pwessel
	* example 28:		Now use clever smaller font-size for trailing 000s in UTM
				annotation (thanks to Florian Wobbe).